Add template file inclusion system and move click_function and zooming_code into separate files

--- a/render_d3_fdg/fdg.html.template
+++ b/render_d3_fdg/fdg.html.template
@@ -42,7 +42,7 @@ function dragended(d) {
   d.fy = null;
 }
 
-${click_function}
+${file=click_function_default.js.template}
 
 function save_svg() {
   var html = d3.select("svg")
