Give ownership of click function and zooming back to python (embedding file names is really just hard-coding)

--- a/render_d3_fdg/fdg.html.template
+++ b/render_d3_fdg/fdg.html.template
@@ -42,7 +42,7 @@ function dragended(d) {
   d.fy = null;
 }
 
-${file=click_function_default.js.template}
+${click_function}
 
 function save_svg() {
   var html = d3.select("svg")
