--- a/render_d3_fdg/fdg_base.html.template
+++ b/render_d3_fdg/fdg_base.html.template
@@ -2,18 +2,60 @@
 <!--This: https://bl.ocks.org/mbostock/6452972#index.html
 and this: https://bl.ocks.org/mbostock/1095795-->
 <meta charset="utf-8">
-<div class="ui-widget">
-   <input id="search">
-    <button type="button" onclick="searchNode()">Search</button>
-</div>
-<input id="SaveSVG" type="button" value="Save SVG" onclick="save_svg();" />
-<br>
-<div id="slider_area">
-<svg width="960" height="50"></svg>
-</div>
-<div id="fdg_area">
-<svg width="${canvasw}" height="${canvash}"></svg>
-</div>
+
+<html>
+  <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.css">
+    <style>
+      body {
+        width: 100%; height: 100%;
+        position: absolute;
+      }
+      .header {
+        width: 100%; height: 5%;
+        text-align: center;
+        font-size: 200%;
+      }
+      .content {
+        width: 100%; height: 95%;
+      }
+      .center, .left, .right {
+        display: inline-block;
+        overflow: auto;
+      }
+      .center { width: 50%; height: 100%; }
+      .left, .right { width: 25%; height: 100%; }
+      .left { float: left; }
+      .right { float:  right; }
+    </style>
+  </head>
+  <body>
+    <div class="header"> ${title} </div>
+    <div class="content">
+      <div class="left">
+        <input id="SaveSVG" type="button" value="Save SVG" onclick="save_svg();" />
+        <br>
+        <div class="ui-widget">
+          <input id="search">
+          <button type="button" onclick="searchNode()">Search</button>
+        </div>
+      </div>
+      <div class="center">
+        <div id="slider_area">
+          <svg width="700" height="50"></svg>
+        </div>
+        <div id="fdg_area">
+          <svg width="700" height="800"></svg>
+        </div>
+      </div>
+      <div class="right">
+          Connections:
+          <br/>
+          <p class="connections"></p>
+      </div>
+    </div>
+  </body>
+</html>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.14.2/lodash.min.js"></script>
 <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
