--- a/render_d3_fdg/fdg_base.html.template
+++ b/render_d3_fdg/fdg_base.html.template
@@ -20,10 +20,9 @@ and this: https://bl.ocks.org/mbostock/1095795-->
         width: 100%; height: 95%;
       }
       .center, .left, .right {
-        display: inline-block;
         overflow: auto;
       }
-      .center { width: 50%; height: 100%; }
+      .center { width: 50%; height: 100%; display: inline-block; }
       .left, .right { width: 25%; height: 100%; }
       .left { float: left; }
       .right { float:  right; }
