Adjustments to make Safari and WebKit browsers work properly

--- a/render_d3_fdg/slider_setup.js.template
+++ b/render_d3_fdg/slider_setup.js.template
@@ -37,9 +37,15 @@ function build_slider() {
       .select(function() { return this.parentNode.appendChild(this.cloneNode(true)); })
         .attr("class", "track-inset")
         .attr("style", "stroke-linecap: round; stroke: #ddd; stroke-width: 8px;")
-      .select(function() { return this.parentNode.appendChild(this.cloneNode(true)); })
+      .select(function() { return this.parentNode.appendChild(this.cloneNode(true)); });
+    
+    slider.append("rect")
         .attr("class", "track-overlay")
-        .attr("style", "stroke-linecap: round; pointer-events: stroke; stroke-width: 50px; cursor: crosshair;")
+        .attr("style", "cursor: crosshair; opacity: 0;")
+	    .attr("x", slider_pos.range()[0])
+	    .attr("y", -10)
+	    .attr("width", width)
+	    .attr("height", 20)
         .call(d3.drag()
             .on("start.interrupt", function() { slider.interrupt(); })
             .on("start drag", function() { slider_action(slider_pos.invert(d3.event.x)); }));
