Search autocomplete fix (list now updates on the fly), bump version to 0.2.1.1
Add a global called USE_SEARCH, default false but set to true in the search_setup.js.template
No longer have a global called optionsArray (always pulled fresh using getOptionsArray)
Fix tab/space issue in slider

--- a/render_d3_fdg/slider_setup.js.template
+++ b/render_d3_fdg/slider_setup.js.template
@@ -6,11 +6,16 @@ var slider_svg = d3.select("#slider_area svg"), // Slider Globals
     slider, handle, slider_pos;
 
 function slider_action(h) {
-    //globals used: handle, fdg_svg, graph, graph_rec, simulation
+    //globals used: handle, fdg_svg, graph, graph_rec, simulation, optionsArray
     handle.attr("cx", slider_pos(h));
     update_graph_data(graph, sliceDown(graph_rec, h));
     update_fdg(graph);
-    optionsArray = getOptionsArray(graph);
+    
+    if(USE_SEARCH) {
+        $(function () { $("#search").autocomplete({
+            source: getOptionsArray(graph)
+        })});
+    }
     focusNode(selectedVal, fdg_svg, graph); // just auto-call this too
     simulation.alpha(1).alphaTarget(0).restart();
 }
@@ -42,10 +47,10 @@ function build_slider() {
     slider.append("rect")
         .attr("class", "track-overlay")
         .attr("style", "cursor: crosshair; opacity: 0;")
-	    .attr("x", slider_pos.range()[0])
-	    .attr("y", -10)
-	    .attr("width", width)
-	    .attr("height", 20)
+        .attr("x", slider_pos.range()[0])
+        .attr("y", -10)
+        .attr("width", width)
+        .attr("height", 20)
         .call(d3.drag()
             .on("start.interrupt", function() { slider.interrupt(); })
             .on("start drag", function() { slider_action(slider_pos.invert(d3.event.x)); }));
