--- a/render_d3_fdg/search_setup.js.template
+++ b/render_d3_fdg/search_setup.js.template
@@ -2,13 +2,7 @@
 // Search setup area //
 ///////////////////////
 
-var optionsArray = getOptionsArray(graph);  //Global vars defined here
-
-$(function () {
-    $("#search").autocomplete({
-        source: optionsArray
-    });
-});
+USE_SEARCH = true;
 
 function searchNode() {
     //find the node
