Auto-submit searches, bugfix for link size on empty search, bump version to 0.2.1.2
Change search to use a form submission in addition to the button
Move autocomplete setup to function rebuildAutocompleteBox
Modify the jquery autocomplete setup to auto-submit the form
Change the empty search case to also resize the links as well as the nodes

--- a/render_d3_fdg/fdg_base.html.template
+++ b/render_d3_fdg/fdg_base.html.template
@@ -35,8 +35,10 @@ and this: https://bl.ocks.org/mbostock/1095795-->
         <input id="SaveSVG" type="button" value="Save SVG" onclick="save_svg();" />
         <br>
         <div class="ui-widget">
-          <input id="search">
-          <button type="button" onclick="searchNode()">Search</button>
+          <form action="javascript:searchNode();">
+                <input id="search">
+                <button type="button" onclick="searchNode()">Search</button>
+          </form>
         </div>
       </div>
       <div class="center">
