Change click function to run focusNode instead (expand that node)
click_function_default -> click_function_log
New default function is click_function_focus_node
focusNode now only uses global vars (since all its arguments were always globals)
Add search functions grabSearchVal and updateSearchVal to move selection back and forth between the search box and selectedVal
rebuildAutocompleteBox now runs updateSearchVal so as the slider rebuilds it, it retains its value
searchNode now updates selectedVal for posterity

--- a/render_d3_fdg/helper_functions.js.template
+++ b/render_d3_fdg/helper_functions.js.template
@@ -129,7 +129,8 @@ function getConnected(graph, selectedVal) {
     return connections;
 }
 
-function focusNode(selectedVal, fdg_svg, graph) {
+function focusNode() {
+    //globals used: selectedVal, fdg_svg, graph
     var nodeSel = fdg_svg.selectAll(".nodes").selectAll("circle");
     var linkSel = fdg_svg.selectAll(".links").selectAll("line");
     var trans = d3.transition().duration(500);
