--- a/render_d3_fdg/graph_setup.js.template
+++ b/render_d3_fdg/graph_setup.js.template
@@ -89,7 +89,7 @@ function enable_zoom() {
 }
 
 function save_svg() {
-  var html = d3.select("svg")
+  var html = fdg_svg //d3.select("svg")
                .attr("title", "test2")
                .attr("version", 1.1)
                .attr("xmlns", "http://www.w3.org/2000/svg")
