Tidy up labels, bump to 0.2.4.1

--- a/render_d3_fdg/graph_setup.js.template
+++ b/render_d3_fdg/graph_setup.js.template
@@ -73,7 +73,8 @@ function click_function_focus_node(d) {
 }
 
 function zoomed() {
-  fdg_svg.selectAll("g").attr("transform", d3.event.transform);
+  fdg_svg.selectAll(".nodes").attr("transform", d3.event.transform);
+  fdg_svg.selectAll(".links").attr("transform", d3.event.transform);
 }
 
 function enable_zoom() {
@@ -139,11 +140,8 @@ function update_fdg(graph) {
         labels = node
             .append("text")
             .text(function(d) { return d.id; })
-            .attr('x', 6)
-            .attr('y', 3)
-            //.attr("dx", 12)
-            //.attr("dy", ".35em")
-            ;
+            .attr('x', 3 + ${scale}*${default_size})
+            .attr('y', 3);
     };
 
     link_update.exit().remove();
