--- a/render_d3_fdg/helper_functions.js.template
+++ b/render_d3_fdg/helper_functions.js.template
@@ -135,16 +135,23 @@ function indented_list(selectedVal, connections) {
 
 function focusNode() {
     //globals used: selectedVal, fdg_svg, graph
-    var nodeSel = fdg_svg.selectAll(".nodes").selectAll("circle");
+    var nodeSel = fdg_svg.selectAll(".nodes").selectAll("g");
     var linkSel = fdg_svg.selectAll(".links").selectAll("line");
     var trans = d3.transition().duration(500);
     
     if (selectedVal == "") {
-        nodeSel.transition(trans)
+        nodeSel.selectAll("circles").transition(trans)
                .attr("stroke", "#fff")
                .attr("stroke-width", String(1.5*${scale})+"px")
                .attr("r", ${scale}*${default_size})
                .attr("opacity", 1);
+        
+        if(${show_labels}) {
+            nodeSel.selectAll("text").transition(trans)
+                .attr("x", 3 + ${scale}*${default_size})
+                .attr("opacity", 1);
+        };
+        
         linkSel.transition(trans).attr("opacity", 1)
             .attr("stroke-width", function (d) { return ${scale}*Math.sqrt(d.value); });
     } else {
@@ -179,12 +186,29 @@ function focusNode() {
                    d.target.id != selectedVal;
         });
         
-        selected.transition(trans).attr("opacity", 1)
+        selected.selectAll("circle").transition(trans)
+            .attr("opacity", 1)
             .attr("r", ${scale}*${expand_scale}*${default_size});
-        neighbor.transition(trans).attr("opacity", 1)
+        neighbor.selectAll("circle").transition(trans)
+            .attr("opacity", 1)
             .attr("r", ${scale}*${neighbor_scale}*${default_size});
-        not_selected.transition(trans).attr("opacity", 0.5)
+        not_selected.selectAll("circle").transition(trans)
+            .attr("opacity", 0.5)
             .attr("r", ${scale}*${shrink_scale}*${default_size});
+        
+        if(${show_labels}) {
+            selected.selectAll("text").transition(trans)
+                .attr("opacity", 1)
+                .attr("x", 3 + ${scale}*${expand_scale}*${default_size});
+            neighbor.selectAll("text").transition(trans)
+                .attr("opacity", 1)
+                .attr("x", 3 + ${scale}*${neighbor_scale}*${default_size});
+            not_selected.selectAll("text").transition(trans)
+                .attr("opacity", 0.5)
+                .attr("x", 3 + ${scale}*${shrink_scale}*${default_size});
+            
+        };
+        
         link_selected.transition(trans).attr("opacity", 1)
             .attr("stroke-width", function (d) { return 4*${scale}*Math.sqrt(d.value); });
         link_not_selected.transition(trans).attr("opacity", 0.5)
